Implement basic StudentGradeCalculator